@@ -1,5 +1,10 @@
 2003-03-28  Alexander Larsson  <alexl@redhat.com>
 
+	* src/file-manager/fm-list-view.c (fm_list_view_click_policy_changed):
+	Use the FMDirectoryView click_policy_changed instead of our own.
+	
+2003-03-28  Alexander Larsson  <alexl@redhat.com>
+
 	* src/file-manager/fm-icon-view.c (fm_icon_view_class_init):
 	Sort directory_view_class initializers
 
